concord_macros/tests/trybuild/fail/codegen_contract/reserved_safe_reqwest_fallible_method.rs
use concord_macros::api;

api! {
    client ReservedSafeReqwestFallibleApi { base "https://example.com" }

    GET FallibleBuilder
        as new_with_safe_reqwest_builder_fallible
        path ["fallible-builder"]
        -> Json<String>
}

fn main() {}
